Update Documentation for 0.56.0 Release
Includes documentation on new remote-control functionality, as well as
a rewrite of the binding documentation.

Uses of `hab start <IDENT>` were replaced with `hab svc load <IDENT>`
in nearly all places, with additional documentation and caveating
around when to use `hab sup run <IDENT>` (tl;dr - rarely, if ever).

How to run Habitat on servers was pulled out into a separate page.

There are various other formatting and wording tweaks scattered
around, as well.

Signed-off-by: Christopher Maier <cmaier@chef.io>

--- a/www/source/docs/best-practices.html.md.erb
+++ b/www/source/docs/best-practices.html.md.erb
@@ -8,6 +8,7 @@ This chapter covers recommended best practices for runtime and buildtime.
 We focus on best practices for packages that use Habitat Builder for continuous builds.
 
 ## Table of Contents
+  - [Running Habitat on Servers](#running-habitat-servers)
   - [Running Habitat Linux Containers](#running-habitat-linux-containers)
   - [Running Habitat Windows Containers](#running-habitat-windows-containers)
   - [Container Orchestration](#container-orchestration)
@@ -20,6 +21,8 @@ We focus on best practices for packages that use Habitat Builder for continuous 
   - [Binary Wrapper Packages](#binary-wrapper)
 
 ---
+<%= partial "/partials/docs/bp-running-habitat-servers"%>
+
 <%= partial "/partials/docs/bp-running-habitat-linux-containers"%>
 
 <%= partial "/partials/docs/bp-running-habitat-windows-containers"%>
@@ -29,7 +32,6 @@ We focus on best practices for packages that use Habitat Builder for continuous 
 <%= partial "/partials/docs/bp-kubernetes"%>
 
 <%= partial "/partials/docs/bp-aks-and-habitat"%>
-
 
 <%= partial "/partials/docs/bp-ecs-and-habitat"%>
 
