--- a/www/source/partials/docs/_using-hab-config-workstation.html.md.erb
+++ b/www/source/partials/docs/_using-hab-config-workstation.html.md.erb
@@ -9,6 +9,8 @@ Optionally, you can also provide a Habitat personal access token to upload packa
 
 > For more information about using Habitat Builder, see the section on [Working with Builder](/docs/using-builder/).
 
+You will also be asked if you want to register Supervisor control gateway secret (see [Remote Command-and-Control of Supervisors](/docs/using-habitat/#remote-control) for further details).
+
 During setup, you may elect to provide anonymous usage data of the <code>hab</code> CLI tool. This information is used by the Habitat team to improve the CLI experience.
 For information on the types of data we gather and how we intend to use it, see [Analytics in Habitat](/docs/about-analytics).
 
