--- a/www/source/partials/docs/_using-hab-install-faq.html.md.erb
+++ b/www/source/partials/docs/_using-hab-install-faq.html.md.erb
@@ -3,7 +3,7 @@ This section tracks some questions that are frequently encountered when download
 
 **Q: Can I just download a GitHub release of Habitat?**
 
-A: While we do cut releases in GitHub as part of our release process those archives are going to be a tar'ed point in time of our source code. As the `hab` cli is written rust if you follow this approach you'll need to compile the source for your platform.
+A: While we do cut releases in GitHub as part of our release process those archives are going to be a tar'ed point in time of our source code. As the `hab` cli is written in Rust, if you follow this approach you'll need to compile the source for your platform.
 
 **Q: Compile for my platform? Does that mean there aren't any OS native packages of `hab`?**
 
