--- a/www/source/partials/docs/_using-hab-overview.html.md.erb
+++ b/www/source/partials/docs/_using-hab-overview.html.md.erb
@@ -18,3 +18,4 @@ This section of the Habitat documentation is dedicated to the operational aspect
   - [Encryption](#using-encryption)
   - [Update Strategies](#using-updates)
   - [Continuous Deployment Using Channels](#continuous-deployment)
+  - [Remote Command-and-Control of Supervisors](#remote-control)
