--- a/www/source/partials/docs/_using-hab-packages.html.md.erb
+++ b/www/source/partials/docs/_using-hab-packages.html.md.erb
@@ -6,18 +6,46 @@ Habitat packages used to start services are run under the Habitat Supervisor. At
 
 Information about [installing Habitat](/docs/install-habitat) and configuring your workstation can be found in the previous section.
 
-## Running single packages for testing
+## Starting the Supervisor
 
-Packages can be tested in the interactive studio environment or natively on a host machine running Linux or Windows.
+In order to run a Habitat-packaged service, you must first run a Habitat Supervisor. There are two ways to start up a Supervisor, and it is important to know the implications of each, and which method is appropriate for your circumstances. These instructions describe the behavior of the 0.56.0 Supervisor and later, which dramatically simplified how Supervisors start up. These instructions also deal with the Supervisor "by itself"; later on, we'll see how to integrate it into different operational scenarios (e.g., SystemD, Windows Services, etc.). It is useful to understand the underlying concepts first.
 
-When entering an interactive studio, a Supervisor is started for you in the background. To run packages inside of this Supervisor:
+For further details about these commands, including all the arguments and options they take, please consult [the hab documentation](/docs/habitat-cli).
+
+### hab sup run
+
+Executing `hab sup run` will start a Supervisor process in the foreground. If this is the first time a Supervisor has been run on the system, nothing else will happen; the process will be waiting for the user to "load" services into it. However, if this is _not_ the first time the Supervisor has been run, any previously loaded services that were not "stopped" (i.e., told not to run) will be started up as well.
+
+When executing `hab sup run`, additional options can be passed that allow the Supervisor to communicate with other Supervisors (such as `--peer`, `--permanent-peer`, etc.), forming a connected network of Supervisors; this is the communication backbone that any services running on the Supervisors use to communicate with each other.
+
+### hab sup run \<PACKAGE_IDENTIFIER\>
+
+When you pass a package identifier (e.g., `core/redis`) as an argument to `hab sup run`, it will start up a Supervisor process, and then load and start the given package in what is effectively a single operation. This is a convenience that is intended primarily for container entrypoint workflows, where a single defined service is the only thing ever intended to run on the Supervisor, but it can also be used for testing or one-off, ad-hoc operations.
+
+This version of `hab sup run` can also accept options that affect how the _package_ should run, such as `--strategy` and `--topology`, in addition to the aforementioned Supervisor-specific options. It can be thought of as running the identifier-less `hab sup run`, along with a `hab sup load`, all as a single command.
+
+### Which startup method should I use?
+
+In the overwhelming majority of cases, you should always start up a Supervisor explicitly, using `hab sup run` without a package identifier argument, _especially_ in production environments.
+
+Because the `<PACKAGE_IDENTIFIER>` invocation mixes Supervisor-specific and service-specific options, it can sometimes be difficult to reason about, depending on how complex your usecase is. As a result, that form should be limited to constrained container-based usecases, and perhaps local simple testing or evaluation scenarios. Additionally, since a Supervisor has state -- the services it is managing -- you may end up starting additional services, depending on what you've done in the past on the same machine. That is, `hab sup run <PACKAGE_IDENTIFIER>` is not, in general, synonymous with "only run this single service".
+
+For all other uses, it is far preferable to start a Supervisor using the identifier-less `hab sup run` invocation, and manage the population of services it runs using `hab svc load` and other commands.
+
+Throughout this documentation, unless otherwise explicitly stated, assume that a Supervisor has been started with `hab sup run`, and that any services were loaded using a separate `hab svc load` invocation.
+
+## Running Single Packages for Testing Locally on a Workstation
+
+Packages can be tested in the interactive studio environment or natively on a workstation running Linux or Windows.
+
+When entering an interactive studio, a Supervisor is started for you in the background by default. To run packages inside of this Supervisor:
 
 1. [Build your package](/docs/developing-packages/#plan-builds) inside an interactive studio. Do not exit the studio after it is built.
-2. To start your service in the running Supervisor, type `hab sup start yourorigin/yourname`, substituting the name and origin of the package you built in step 1. Your service should now be running.
+2. To start your service in the running Supervisor, type `hab svc load yourorigin/yourname`, substituting the name and origin of the package you built in Step 1. Your service should now be running.
 
-Because the Supervisor is running in the background, you will not see the Supervisor output as you start your service. However you can use the `sup-log` (or `Get-SupervisorLog` on Windows) command that will stream the tail of the Supervisor output.
+Because the Supervisor is running in the background, you will not see the Supervisor output as you start your service. However you can use the `sup-log` (or `Get-SupervisorLog` on Windows) command that will stream the tail of the Supervisor output (you can also look at the contents of `/hab/sup/default/sup.log`, which is where the Studio directs its Supervisor output).
 
-If your host machine is running Linux, do the following to run your packages:
+If your host machine is running Linux, do the following to run your packages for one-off evaluations (not production uses!):
 
 * Add the `hab` user and group.
 
@@ -26,125 +54,26 @@ If your host machine is running Linux, do the following to run your packages:
     $ sudo useradd -g hab hab
     ```
 
-* Run the `hab` CLI as root.
+* Run the `hab` Supervisor as root.
 
     ```shell
-    $ sudo hab start yourorigin/yourname
+    $ sudo hab sup run yourorigin/yourname
     ```
 
-You may use the same `hab start` command on Windows but omit the `sudo` command. However, you should be inside of an elevated shell. Also, note that the `hab` user is not necessary on Windows. If it is absent, services will run under the identity of the current user. If a `hab` user is present, you will need to provide its password via the`--password` argument:
+You may use the same `hab run` command on Windows but omit the `sudo` command. However, you should be inside of an elevated shell. Also, note that the `hab` user is not necessary on Windows. If it is absent, services will run under the identity of the current user. If a `hab` user is present, you will need to provide its password via the`--password` argument:
 
 ```shell
 PS C:\\> $cred = Get-Credential hab
-PS C:\\> hab start yourorigin/yourname --password $cred.GetNetworkCredential().Password
+PS C:\\> hab sup run yourorigin/yourname --password $cred.GetNetworkCredential().Password
 ```
 
-## Running packages in any environment
+In all cases, you may wish to run `hab svc unload <yourorigin>/<yourname>` when you are done working with your package, to remove it from the Supervisor. Otherwise, your Supervisor will try to start your service each time it start up.
 
-The `hab` program can also be installed on servers. It will retrieve the necessary components (like the current release of the Supervisor) in order to run packages. Thus, you can start the Supervisor on any compatible system.
-
-To start the Supervisor, you can write an init script or a systemd unit file. For example, for systemd:
-
-    [Unit]
-    Description=The Habitat Supervisor
-
-    [Service]
-    ExecStart=/bin/hab sup run
-
-    [Install]
-    WantedBy=default.target
-
-On Windows, you can run the Supervisor as a Windows Service. You can use the `windows-service` Habitat package to host the Supervisor inside the Windows Service Control Manager. See the `windows-service` [readme](https://github.com/habitat-sh/windows-service/blob/master/README.md) for more details regarding its installation and use.
-
-Next use `hab svc load` to load one or more services into the Supervisor for permanent supervision. Using the example from above:
-
-```shell
-$ sudo hab svc load yourorigin/yourname
-```
-
-## Running a package on a virtual machine (VM)
-
-After you have built the hart package, do the following:
-
-1. Spin up a Virtual Machine.
-2. Securely copy the .hart package from your local workstation onto the virtual machine. SCP is a widely-used tool to do this; however, you can also use FTP or whatever tool you use to copy things from your local workstation to a remote server.
-3. SSH into the virtual machine.
-4. In the virtual machine - run these commands:
-
-     1. Install Habitat
-
-        ```shell
-        $ curl https://raw.githubusercontent.com/habitat-sh/habitat/master/components/hab/install.sh | sudo bash
-        ```
-
-     2. Install the package (which should be on the virtual machine)
-
-        ```shell
-        $ sudo hab pkg install your_package.hart
-        ```
-
-     3. Create the Habitat group
-
-        ```shell
-        $ sudo groupadd hab
-        $ sudo useradd -g hab hab
-        ```
-
-     4. Start the package
-
-        ```shell
-        $ sudo hab start your_origin/your_package
-        ```
-
-On Windows this looks very similar with the additional step of installing the Chocolatey package manager:
-
-```shell
-PS C:\\> Set-ExecutionPolicy Bypass -Scope Process -Force
-PS C:\\> iex ((New-Object System.Net.WebClient).DownloadString('https://chocolatey.org/install.ps1'))
-PS C:\\> choco install habitat
-PS C:\\> hab pkg install your_package.hart
-PS C:\\> hab start your_origin/your_package
-```
-
-## Starting only the Supervisor
-
-Starting the Supervisor is as simple as running:
-
-```shell
-$ hab sup run
-```
-
-This command also lets you override the default gossip and http gateway binding ports, just like when using `hab start`.
-
-## Running the Supervisor with a Host's init System
-
-Only one system service needs to be added. Your choice of Linux distribution may dictate which init system is in use (i.e. SysVinit, Systemd, runit, etc), but all options boil down to simply running `hab sup run` as the runnable program. The following example assumes that the Habitat program `hab` is installed, binlinked as `/bin/hab`, and a `hab` user and group are present.
-
-For example, a suitable Systemd unit would simply be:
-
-```
-[Unit]
-Description=The Habitat Supervisor
-
-[Service]
-ExecStart=/bin/hab sup run
-
-[Install]
-WantedBy=default.target
-```
-
-It is important to start the Supervisor via the `hab` program as upgrades to the `core/hab` Habitat package will also upgrade the version of the Supervisor on next start.
-
-On Windows, you can run the Supervisor as a Windows Service. You can use the `windows-service` Habitat package to host the Supervisor inside the Windows Service Control Manager:
-
-```shell
-PS C:\\> hab pkg install core/windows-service
-PS C:\\> hab pkg exec core/windows-service install
-```
+For more structured ways of running the Habitat Supervisor on servers, please see [Running Habitat on Servers](/docs/best-practices/#running-habitat-servers).
 
 ## Loading a Service for Supervision
 
-To add a service to a Supervisor, you use the `hab svc load` subcommand. It has many of the same service-related flags and options as `hab start`, so there's nothing extra to learn here (for more details, read through the [Run packages sections](/docs/using-habitat)). For example, to load `yourorigin/yourname` in a Leader topology, a Rolling update strategy and a Group of "acme", run the following:
+To load a service into a Supervisor, you use the `hab svc load` subcommand. As an example, to load `yourorigin/yourname` in a Leader topology, with a Rolling update strategy, and a Group of "acme", run the following:
 
 ```shell
 $ hab svc load yourorigin/yourname --topology leader --strategy rolling --group acme
@@ -158,7 +87,7 @@ $ hab svc load core/redis
 
 ## Unloading a Service from Supervision
 
-To unload and remove a service from supervision, you use the `hab svc unload` subcommand. If the service is was running, then it will be stopped first, then removed last. This means that the next time the Supervisor is started (or restarted), it will not run this unloaded service. For example, to remove the `yourorigin/yourname` service:
+To remove a service from supervision, you use the `hab svc unload` subcommand. If the service is was running, then it will be stopped first, then removed. This means that the next time the Supervisor is started (or restarted), it will not run this unloaded service. For example, to remove the `yourorigin/yourname` service:
 
 ```shell
 $ hab svc unload yourorigin/yourname
@@ -179,6 +108,8 @@ To resume running a service which has been loaded but stopped (via the `hab svc 
 ```shell
 $ hab svc start core/redis
 ```
+
+> Note: in Habitat versions prior to 0.56.0, `hab svc start` could also be used to load up a service if it wasn't already loaded. In 0.56.0 and later, however, this has changed; `hab svc start` can only operate on services that have previously been loaded.
 
 ## Querying the Supervisor for service status
 
@@ -205,7 +136,7 @@ The HTTP API provides information on the following endpoints:
 
 * `/census` - Returns the current Census of Services on the Ring (roughly what you see as a service in config.toml).
 * `/services` - Returns an array of all the services running under this Supervisor.
-* `/services/{name}/{group}/config` - Returns this service groups current configuration.
+* `/services/{name}/{group}/config` - Returns this service group's current configuration.
 * `/services/{name}/{group}/{organization}/config` - Same as above, but includes the organization.
 * `/services/{name}/{group}/health` - Returns the current health check for this service.
 * `/services/{name}/{group}/{organization}/health` - Same as above, but includes the organization.
